@@ -1,5 +1,10 @@
 2008-08-22  Frederic Peters  <fpeters@0d.be>
 
+	* jhbuild/versioncontrol/git.py: only use git <command>, no more
+	git-<command>.
+
+2008-08-22  Frederic Peters  <fpeters@0d.be>
+
 	* modulesets/gnome-external-deps-2.24.modules,
 	patches/mono.remove-arg_max-check.patch: added a patch for mono to
 	build with newer libc.
